--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,19 @@
   pointer-events: none;
 }
 
+.user_list_wrapper {
+  display: flex;
+}
+
+.all_user_list {
+  width: 50%;
+  border-right: 1px solid;
+  height: 100vh;
+}
+
+.random_user {
+  padding: 0 10px;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
